# meeting-ai

./: .env  command.txt  main.ipynb  main.py  openai_transcription.ipynb  pyproject.toml  transcribe.ipynb
data/processed/: result_sample_data.csv  sample_data.csv  sample_data_フィラー.xlsx  sample_data_議題から逸脱.xlsx  structured.csv  structured_gTTS_test.csv  structured_sample_meeting.csv  structured_sample_meeting.mp4.csv  structured_就職面接でたぶんスーツ着てない奴.csv
data/result/: sample_data_フィラー_filler.csv  sample_data_議題から逸脱_deviation.csv
data/transcription/: 就職面接でたぶんスーツ着てない奴_10minutes_amivoice_-a-general.pkl  就職面接でたぶんスーツ着てない奴_10minutes_deepgram_whisper-large.pkl  就職面接でたぶんスーツ着てない奴_10minutes_openai_whisper-1.pkl
src/: __init__.py  config.py  llm.ipynb  llm.py  mp4_trimming.py  transcription.py  transcription_openai.py
